@@ -1128,9 +1128,9 @@ function displayTextCell($statsAlbum, $photoIndex, $photoId, $rating, $ratingcou
         }
     }
 
-    if ( $showViews &&
-    !($statsAlbum->fields["display_clicks"] == "no") &&
-    !$gallery->session->offline) {
+    if ( $showViews && 
+	($statsAlbum->fields["display_clicks"] == 'yes' || $gallery->user->isAdmin()) &&
+	!$gallery->session->offline) {
 
         $innerStatsTable->addElement(array(
         'content' => _("Views:"),
