@@ -1,8 +1,15 @@
+2005-08-11 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b2
+
+	* Fix: Even if clickcount display is off for an album 
+	       an admin should see the click counts in stats.
+
+	Thanks to Lucent.
+
 2005-08-10 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b1
 
 	%!@# ZLORFIX ! i shouldnt touch RC code.
 
-	Fix: Minimum width change broke ecard with pictures >= 200px width.
+	* Fix: Minimum width change broke ecard with pictures >= 200px width.
 
 2005-08-09  Chris Kelly <ckdake@users.sf.net> 1.5.1-RC2
 
